# backupninja

./: .gitignore  AUTHORS  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  backupninja  backupninja.spec  backupninja.spec.in  changelog  configure  configure.in  ninjahelper
docs/: changelog
docs/examples/: example.rdiff  example.sh  example.sys
docs/man/: backupninja.1  backupninja.conf.5
etc/: Makefile.am  Makefile.in  backupninja.conf  backupninja.conf.in
etc/backup.d/: example.dup  example.ldap  example.makecd  example.mysql  example.pgsql  example.rdiff  example.svn  example.sys  example.trac
etc/cron.d/: backupninja  backupninja.in
etc/logrotate.d/: backupninja  backupninja.in
examples/: Makefile.am  Makefile.in  example.bup  example.dup  example.ldap  example.maildir  example.mysql  example.pgsql  example.rdiff  example.rsnap  example.rsync  example.sh  example.svn  example.sys
handlers/: Makefile.am  Makefile.in  bup.helper.in  bup.in  dsync.in  dup  dup.helper  dup.helper.in  dup.in  easydialog.sh  ldap  ldap.helper  ldap.helper.in  ldap.in  maildir  maildir.in  makecd  makecd.helper  makecd.helper.in  makecd.in  mysql  mysql.helper  mysql.helper.in  mysql.in  pgsql  pgsql.helper  pgsql.helper.in  pgsql.in  rdiff  rdiff.helper  rdiff.helper.in  rdiff.in  rsnap.in  rsync.in  rub  rub.in  sh  sh.in  svn  svn.in  (+10 more)
lib/: Makefile.am  Makefile.in  easydialog.in  easydialog.sh  parseini.in  ssh.in  tools.in  vserver.in
man/: Makefile.am  Makefile.in  backup.d.5  backupninja.1  backupninja.conf.5  ninjahelper.1
src/: Makefile.am  Makefile.in  backupninja.in  ninjahelper.in  ninjareport.in
