#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([backupninja],[0.9.0],[micah@riseup.net])
AC_CONFIG_SRCDIR([src/backupninja.in])
#AC_CONFIG_HEADERS([config.sh])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PATH_PROGS([BASH], [bash])
#AC_PATH_PROGS([PERL], [perl])

#AC_DEFINE([MYVERSION], [5.6])
#AC_DEFINE_UNQUOTED([MYDIR], "${sysconfdir}")
#AC_DEFINE([SYSCONFDIR], [$sysconfdir], [System config dir])
AC_SUBST([CFGDIR], "${sysconfdir}")

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                etc/Makefile
                examples/Makefile
                handlers/Makefile
                lib/Makefile
                man/Makefile
                src/Makefile])

AC_OUTPUT([ backupninja.spec])
