#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([backupninja],[0.9.3],[backupninja@lists.riseup.net])
AC_CONFIG_SRCDIR([src/backupninja.in])
AM_INIT_AUTOMAKE

# Checks for programs.

# BASH may already be set in the shell, if the admin then changes the
# the /bin/sh symlink to a non-bash shell, all hell will break lose.
unset BASH
AC_PATH_PROGS([BASH], [bash], [/bin/bash], [$PATH:/bin:/usr/bin:/usr/sbin])
if test x$BASH = "x"; then
    AC_MSG_ERROR([bash is required])
fi

AC_CHECK_PROGS(SED, sed)
if test x$SED = "x"; then
    AC_MSG_ERROR([sed is required])
fi

AC_CHECK_PROGS(AWK, awk)
if test x$AWK = "x"; then
    AC_MSG_ERROR([awk is required])
fi

AC_SUBST([CFGDIR], "${sysconfdir}")

AC_CONFIG_FILES([Makefile
                etc/Makefile
                examples/Makefile
                handlers/Makefile
                lib/Makefile
                man/Makefile
                src/Makefile])

AC_OUTPUT([ backupninja.spec])
